[metadata]
name = poetry_pdf
version = 1.1.0

description = Poetry formatter to PDF
url = https://github.com/JoelLefkowitz/poetry-pdf

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

keywords = 
    pdf

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[portfolio]
project_type = Pypi package
status = Stable
homepage = https://poetry-pdf.readthedocs.io

languages = 
    Python

frameworks = 
    Jinja

paradigms = 
    Object oriented programming

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
    